# MagLoc-AR

./: CMakeLists.txt  README.md
example/: WirelessPositioningMultiplexingAgentWoCovMapPrior.cc  WirelessPositioningMultiplexingAgentWoCovMapPrior.h  compound_state_sampler_wireless_positioning_multiplexing_agent_wo_cov_map_prior.h  compound_state_wireless_positioning_agent.cc  run_wireless_positioning.cc
modules/pdr/: CMakeLists.txt
modules/pdr/include/: pdr.h  util.h
modules/pdr/src/: pdr.cc  util.cc
modules/predict/: CMakeLists.txt
modules/predict/IMU/: IMUPreIntegration.cc  IMUPreIntegration.h  imu_predict.cc  imu_predict.h
modules/predict/common/: DataHelp.h  Utility.h  common_type.h
modules/predict/filter_predict/: IMUPredictor.h  PredictFilter.cc  PredictFilter.h  butter.cpp  butter.h
modules/predict/sophus/: se3.cpp  se3.h  so3.cpp  so3.h
state_estimation/: CMakeLists.txt
state_estimation/configuration/: configuration.cc  configuration.h
state_estimation/distribution/: distribution_map.cc  distribution_map.h  distribution_map_base.h  distribution_map_multivariate_gaussian.cc  distribution_map_multivariate_gaussian.h  gaussian_distribution.h  probability_mapper_2d.cc  probability_mapper_2d.h  probability_mapper_base.h  probability_mapper_cov.cc  probability_mapper_cov.h
state_estimation/evaluation/: filter_evaluation.h  observation_model_evaluator.h
state_estimation/evaluation/utils/: Statistics.h
state_estimation/filter/: particle_filter.h
state_estimation/observation_model/: base.h  bluetooth_observation_model.cc  bluetooth_observation_model.h  compound_observation_model.h  fusion_observation_model.cc  fusion_observation_model.h  geomagnetism_observation_model.cc  geomagnetism_observation_model.h  imu_observation_model.cc  imu_observation_model.h  orientation_observation_model.cc  orientation_observation_model.h  wifi_observation_model.cc  wifi_observation_model.h
state_estimation/offline/: client_data_reader.cc  client_data_reader.h  results_reader.cc  results_reader.h  sequential_reader_base.h  trajectory_reader.cc  trajectory_reader.h
state_estimation/prediction_model/: base.h  compound_prediction_model.cc  compound_prediction_model.h  kalman_filter_model.cc  kalman_filter_model.h  motion_model_2d_displacement.cc  motion_model_2d_displacement.h  motion_model_2d_local_velocity_1d_rotation.cc  motion_model_2d_local_velocity_1d_rotation.h  motion_model_2d_local_velocity_3d_rotation.cc  motion_model_2d_local_velocity_3d_rotation.h  motion_model_2d_position_2nd_order_continuity.cc  motion_model_2d_position_2nd_order_continuity.h  motion_model_2d_velocity_diff_yaw.cc  motion_model_2d_velocity_diff_yaw.h  motion_model_3d_orientation.cc  motion_model_3d_orientation.h  motion_model_constant_velocity.cc  motion_model_constant_velocity.h  motion_model_cvcr.cc  motion_model_cvcr.h  motion_model_cvcr_yaw.cc  motion_model_cvcr_yaw.h  motion_model_cvcr_yaw_1st_continuity.cc  motion_model_cvcr_yaw_1st_continuity.h  motion_model_yaw_differential.cc  motion_model_yaw_differential.h  parameter_model_random_walk.cc  parameter_model_random_walk.h
state_estimation/sampler/: gaussian_3d_orientation_sampler.h  gaussian_sampler.h  uniform_3d_orientation_sampler.h  uniform_range_sampler.h  uniform_set_sampler.h
state_estimation/util/: client_request.h  lie_algebra.cc  lie_algebra.h  misc.cc  misc.h  queue_memory.h  result_format.cc  result_format.h  util_struct.h  variable_name_constants.h
state_estimation/variable/: base.h  orientation.cc  orientation.h  position.cc  position.h
state_estimation/visualization/: visualizer.cc  visualizer.h
